all.yaml

apiVersion: v1

kind: Service

metadata:

  name: traefik-dashboard-service

 

spec:

  type: LoadBalancer

  ports:

    - port: 8080

      targetPort: dashboard

  selector:

    app: traefik

---

apiVersion: v1

kind: Service

metadata:

  name: traefik-web-service

 

spec:

  type: LoadBalancer

  ports:

    - targetPort: web

      port: 80

  selector:

    app: traefik
---
kind: Deployment

apiVersion: apps/v1

metadata:

  name: traefik-deployment

  labels:

    app: traefik

 

spec:

  replicas: 1

  selector:

    matchLabels:

      app: traefik

  template:

    metadata:

      labels:

        app: traefik

    spec:

      serviceAccountName: traefik-account

      containers:

        - name: traefik

          image: traefik:v3.0

          args:

            - --api.insecure

            - --providers.kubernetesingress

          ports:

            - name: web

              containerPort: 80

            - name: dashboard

              containerPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              name: web
