ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypyapp-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service: 
            name: my-app-service
            port:
              number: 80
